task1-kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dodo-payments
  labels:
    name: dodo-payments
    environment: dev
